@@ -143,7 +143,7 @@ public abstract class TransactionWithVariables extends Transaction implements IV
     	XMLVector<Long> ordered = orderedVariables.get(0);
     	int size = ordered.size();
     	
-    	Long value = new Long(variable.priority);
+    	Long value = Long.valueOf(variable.priority);
     	
     	if (ordered.contains(value))
     		return;
@@ -165,7 +165,7 @@ public abstract class TransactionWithVariables extends Transaction implements IV
     	vVariables.remove(variable);
     	variable.setParent(null);
     	
-    	Long value = new Long(variable.priority);
+    	Long value = Long.valueOf(variable.priority);
         removeOrderedVariable(value);
         
         hasChanged = true;
@@ -183,7 +183,7 @@ public abstract class TransactionWithVariables extends Transaction implements IV
     
     private void increaseOrder(DatabaseObject databaseObject, Long before) throws EngineException {
     	XMLVector<Long> ordered = null;
-    	Long value = new Long(databaseObject.priority);
+    	Long value = Long.valueOf(databaseObject.priority);
     	
     	if (databaseObject instanceof Variable)
     		ordered = orderedVariables.get(0);
@@ -205,7 +205,7 @@ public abstract class TransactionWithVariables extends Transaction implements IV
     
     private void decreaseOrder(DatabaseObject databaseObject, Long after) throws EngineException {
     	XMLVector<Long> ordered = null;
-    	Long value = new Long(databaseObject.priority);
+    	Long value = Long.valueOf(databaseObject.priority);
     	
     	if (databaseObject instanceof Variable)
     		ordered = orderedVariables.get(0);
